# sepscr

./: .gitignore  CMakeLists.txt  CMakePresets.json  test.ss
include/sepscr/backend/: instruction.h  state.h  unit.h  value.h
include/sepscr/frontend/: asm.h  token.h
src/backend/: state.c  unit.c  value.c
src/backend/instructions/: heap.c  instruction.c  numbers.c  standard.c
src/frontend/: asm.c
tests/: asm.c
